--- a/src/Components/Home/Home.sass
+++ b/src/Components/Home/Home.sass
@@ -1,8 +1,3 @@
 .app
-  width: 40%
-  margin: 1rem auto
-  text-align: center
-
-  .app__logo
-    width: 20rem
-    border-radius: 100%
+  height: 100%
+  margin: 0 auto
